refactor(allocation): centralizar validaciones de negocio en submódulo validation